# RCA

./: .gitignore  AGENTS.md  README.md  RELATORIO-PRODUCAO.md  SDD_Sistema_RCA.md  docker-compose.yml  opencode.json  package-lock.json  package.json  revisor-producao.md  vercel.json
apps/api/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/api/scripts/: _apply_all_batches_mcp.py  _apply_all_mcp_batches.py  _apply_chunks_api.py  _apply_chunks_direct.py  _apply_chunks_http.py  _apply_chunks_mcp.py  _apply_chunks_mcp_exec.py  _apply_chunks_stdio_mcp.py  _apply_invoke_batch.py  _apply_invokes_stdio.py  _apply_mcp_batches.py  _apply_progress.py  _apply_q_batches_stdio.py  _apply_remaining_batches.py  _apply_via_management_api.py  _emit_mcp_payload.py  _export_batch_payloads.py  _extract_chunks.py  _extract_queries.py  _gen_mcp_calls.py  _get_apply_query.py  _load_mcp_payload.py  _load_pending_query.py  _mcp_apply_loop.py  _mcp_apply_runner.py  _mcp_batch_apply.py  _mcp_chunk_runner.py  _mcp_prepare.py  _prep_next_mcp.py  _read_chunk.py  _stage_batch.py  apply_all_mcp.py  apply_sync_batches.py  apply_via_mcp_http.py  backfill_contato_sql.py  build_mcp_invokes.py  generate_sync_sql.py  map_chunks.py  mcp_batch_helper.py  print_mcp_payload.py  (+3 more)
apps/api/scripts/.sync_batches/: _all_queries.json  _apply_chunk.txt  _args_00.json  _batch_00.json  _batch_010_payload.json  _batch_02.json  _bulk_a.sql  (+76 more)
apps/api/tests/: conftest.py  test_cliente_criar.py  test_health.py  test_pipeline.py  test_security_authorization_deny.py  test_security_liberacao.py  test_sync.py
(+275 files in other folders)
